--- a/templates/DeleteDeptData.html
+++ b/templates/DeleteDeptData.html
@@ -119,7 +119,7 @@
     
             <div class = "col-md-3"></div>
             <div class = "col-md-5 jumbotron">
-                <h4 class = "text-center">Department Details</h4>
+                <h4 class = "text-center">Delete Department Details</h4>
                 <br>
                 <form action="" method="post">
                     <div class="mb-2">
